<resources>
    <string name="app_name">FashionTriviaTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Title">Fashion Trivia</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="playButton">PLAY</string>
    <string name="rulesButton">RULES</string>
    <string name="blur" />
    <string name="playnowButton">Play Now</string>
    <string name="areYouText">Do you want to be\n a fashion expert?</string>
    <string name="score">score</string>
    <string name="status">status</string>
    <string name="scoreNumber">%d</string>
    <string name="pointsText">Points</string>
    <string name="statusResultText">%d</string>
    <string name="question_count">%d of %d</string>
    <string name="questionText">Who designed this look?</string>
    <string name="nextQuestionButton">next question</string>
    <string name="anwertest">You\'re getting better!</string>
    <string name="resultsText">Your results:</string>
    <string name="NewMatchButton">nem match</string>
    <string name="homeButton">home</string>
    <string name="outoftenText">out of 10 questions</string>
    <string name="finalStatusValue">Status:</string>
    <string name="out_of_10_questions">Out of 10  questions</string>
    <string name="bad">You can do better, baby!</string>
    <string name="medium">You\'re getting there!</string>
    <string name="good">You\'re killing it!</string>
    <string name="amazing">You\'re it, honey.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fashionbaby">Fashion Baby</string>
    <string name="fashionstudent">Fashion Student</string>
    <string name="fashionsavvy">Fashion Savvy</string>
    <string name="fashionstar">Fashion Star</string>
    <string name="wardrobeempty">You don\'t have any looks in your wardrobe.</string>
    <string name="look_photo">Look photo</string>
    <string name="remove">Remove</string>
    <string name="my_wardrobe">MY WARDROBE</string>
    <string name="status_image">status image</string>
    <string name="image">LookImage</string>
    <string name="scoreResult">Score Result</string>
</resources>
