<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anaandreis.fashiontriviatest.navigation.TitleFragment">

    <data>
    <variable
        name="gameViewModel"
        type="com.anaandreis.fashiontriviatest.domain.GameViewModel"/>
        <variable
            name="homeFragment"
            type="com.anaandreis.fashiontriviatest.ui.HomeFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/roundedrectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/resultText"
            style="@style/mainTextStyle"
            android:text="@string/areYouText"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694" />


        <Button
            android:id="@+id/buttonPlay"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/playnowButton"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:icon="@drawable/ic_baseline_play_circle_outline_24"
            app:iconPadding="0dp"
            app:iconSize="30sp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            app:strokeColor="@color/white" />

        <Button
            android:id="@+id/wardrobeButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:text="@string/my_wardrobe"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
            app:layout_constraintVertical_bias="1.0"
            app:strokeColor="@color/white" />

        <TextView
            android:id="@+id/finalStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.01"
            android:text="@string/status"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.182" />

        <TextView
            android:id="@+id/scoreText"
            style="@style/scoreThinStatus"
            android:fontFamily="@font/roboto"
            android:text="@string/score"
            app:layout_constraintBottom_toTopOf="@+id/scoreNumberHome"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/pointsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.04"
            android:text="@string/pointsText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/scoreText"
            app:layout_constraintStart_toStartOf="@+id/scoreText"
            app:layout_constraintTop_toBottomOf="@+id/scoreNumberHome" />

        <TextView
            android:id="@+id/scoreNumberHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/scoreNumber"
            android:textSize="76sp"
            app:layout_constraintBottom_toTopOf="@+id/pointsText"
            app:layout_constraintEnd_toEndOf="@+id/scoreText"
            app:layout_constraintStart_toStartOf="@+id/scoreText"
            app:layout_constraintTop_toBottomOf="@+id/scoreText"
            tools:text="0" />

        <ImageView
            android:id="@+id/StatusImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/child_friendly"
            app:layout_constraintEnd_toEndOf="@+id/finalStatusText"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="@+id/finalStatusText"
            app:layout_constraintTop_toBottomOf="@+id/finalStatusText"
            android:contentDescription="@string/status_image" />

        <TextView
            android:id="@+id/statusResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="-0.04"
            android:text="@string/statusResultText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/StatusImage"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="@+id/StatusImage"
            app:layout_constraintTop_toBottomOf="@+id/StatusImage"
            tools:text="Fashion Baby" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
