<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anaandreis.fashiontriviatest.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center_horizontal"
            android:text="@string/Title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="64sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/Blur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blur"
            android:src="@drawable/whiteblur"
            app:layout_constraintBottom_toBottomOf="@+id/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Title" />

        <Button
            android:id="@+id/buttonPlay"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/playButton"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toTopOf="@+id/buttonRules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:strokeColor="@color/white"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/buttonRules"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rulesButton"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
            app:strokeColor="@color/white"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
